--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /* your code here */
+.link-boxes{
+	
+	display:flex;
+	justify-content:space-evenly;
+	align-items:start;
+}
+.media-icons{
+	display:flex;
+	flex-direction: row-reverse;
+	
+	align-items:center;
+	padding:50px;
+	
+}
+img{
+	padding:10px;
+	width:50px;
+	border-radius:50%;
+}
